Resolve merge conflicts

--- a/Personal Portfolio/index.html
+++ b/Personal Portfolio/index.html
@@ -11,18 +11,20 @@
 		<header class="site-header">
 			<div class="container header-inner">
 				<a class="logo" href="#">MyPortfolio</a>
-				<nav class="main-nav" aria-label="Main navigation">
-					<button class="nav-toggle" aria-expanded="false" aria-controls="nav-list" aria-label="Toggle navigation">
-						<span class="hamburger"></span>
-					</button>
-					<ul id="nav-list" class="nav-list">
-						<li><a href="#home">Home</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#projects">Projects</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</nav>
-				<button class="theme-toggle" aria-label="Toggle theme">☾</button>
+				<div class="header-right">
+					<nav class="main-nav" aria-label="Main navigation">
+						<button class="nav-toggle" aria-expanded="false" aria-controls="nav-list" aria-label="Toggle navigation">
+							<span class="hamburger"></span>
+						</button>
+						<ul id="nav-list" class="nav-list">
+							<li><a href="#home">Home</a></li>
+							<li><a href="#about">About</a></li>
+							<li><a href="#projects">Projects</a></li>
+							<li><a href="#contact">Contact</a></li>
+						</ul>
+					</nav>
+					<button class="theme-toggle" aria-label="Toggle theme">☾</button>
+				</div>
 			</div>
 		</header>
 
